Adjusted the height to fixed the extra space that was at the buttom on the page August 5,2020 @ 10:34 am

--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,10 @@
 
 body, html{
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
-.container
+.wrapper
 {
     background: url("../img/photo.jpg") no-repeat;
     /* background-repeat: no-repeat; */
@@ -22,14 +22,14 @@ body, html{
     background-position: center; 
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
     overflow: hidden;
    
 }
 .color-overlay{
     width: 100%;
-    height: 100%;
-    /* background: rgba(48, 168, 94, 0.438); */
-    /* background: rgba(255, 255, 255, 0.438); */
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
     position: absolute;
     top:0;
@@ -40,7 +40,7 @@ body, html{
 
 
 
-.column{
+/* .column{
      float: right; 
     display: block;
     padding-top:4rem ;
@@ -49,16 +49,16 @@ body, html{
     align-items: center;
     justify-content: center;
    
-}
+} */
 
 .aboutme{
     float: left;
     max-width: 36rem;
     padding: 4rem;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100vh; 
     justify-content: space-evenly;   
-   z-index: 2;
+    z-index: 2;
 }
 
 h1{
@@ -81,6 +81,6 @@ h1{
     color: currentColor;
     cursor: pointer;
     text-decoration: none;
-    z-index: 3;
+    z-index: 2;
 
 }
